# ChangeLog for net-misc/gsasl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/gsasl/ChangeLog,v 1.29 2008/11/29 20:44:21 dertobi123 Exp $

*gsasl-0.2.29 (29 Nov 2008)

  29 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  -gsasl-0.2.28.ebuild, +gsasl-0.2.29.ebuild:
  Version bump, bug #246507

*gsasl-0.2.28 (07 Sep 2008)

  07 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org> -gsasl-0.2.3.ebuild,
  -gsasl-0.2.10.ebuild, -gsasl-0.2.21.ebuild, -gsasl-0.2.26.ebuild,
  +gsasl-0.2.28.ebuild:
  Version bump, #236712 and cleanup

*gsasl-0.2.26 (15 Jun 2008)

  15 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +gsasl-0.2.26.ebuild:
  Version bump (#217015), remove useless virtual/libc depend, remove static
  use flag (#165740)

  03 Feb 2008; Fabian Groffen <grobian@gentoo.org> gsasl-0.2.10.ebuild,
  gsasl-0.2.21.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*gsasl-0.2.21 (30 Sep 2007)

  30 Sep 2007; Andrej Kacian <ticho@gentoo.org> +gsasl-0.2.21.ebuild:
  Version bump.

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  14 Jan 2006; Fabian Groffen <grobian@gentoo.org> gsasl-0.2.10.ebuild:
  Marked ~ppc-macos (bug #111381)

*gsasl-0.2.10 (02 Jan 2006)

  02 Jan 2006; Tom Martin <slarti@gentoo.org> +gsasl-0.2.10.ebuild:
  Version bump, resolves bug #117318.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> gsasl-0.2.4.ebuild:
  Mark 0.2.4 stable on ia64

  05 Jul 2005; Tom Martin <slarti@gentoo.org> gsasl-0.2.4.ebuild:
  Marked ~ia64.

  02 May 2005; Michael Hanselmann <hansmi@gentoo.org> gsasl-0.2.4.ebuild:
  Stable on ppc.

  02 May 2005; Elfyn McBratney <beu@gentoo.org> gsasl-0.2.4.ebuild:
  Stable on x86.

  02 May 2005; Tom Martin <slarti@gentoo.org> gsasl-0.2.4.ebuild:
  Fix a typing error, preventing the ebuild from installing anything but docs.

  19 Apr 2005; Tom Martin <slarti@gentoo.org> gsasl-0.2.4.ebuild: