@@ -1,4 +1,6 @@
 DIST gsasl-0.2.29.tar.gz 3519920 RMD160 56aabbf07f5d02921d3dc24dfa8ff4525b1789ff SHA1 5495963208574f8b2532603e898829fe3325a3dd SHA256 65671084d17ff03c48571582b58ee11c1ecb35caf99ff28c90db0757dd38daaf
+DIST gsasl-1.1.tar.gz 3775776 RMD160 a6f4b77c4d9de37099e780471d4e16e0d5da9365 SHA1 18ad50a16da8cbb53b720968545330fa5cdaa380 SHA256 8410f2dd328c0bba0b5d4b5b3fdf603cd65d58ea48d8d31746271b818665c9cc
 EBUILD gsasl-0.2.29.ebuild 1289 RMD160 608a0dd2d48444160cb832292b18a0ade435d9c3 SHA1 8d57a5d52f0ba3814e7a403e029362109063bb8c SHA256 852cbd3a2fbb81eb81895b36486b5f057748937b82fed12465eeec2a1a745777
-MISC ChangeLog 3866 RMD160 d93a0891d645c94cd89db355e883b244bce3234a SHA1 883b911d5c2791a9ecc578525382ef3dbf6e7387 SHA256 3f9daf3b6537d000abc6b660ec8e7ca92bd1ca4a858c316844f262575b362b5d
+EBUILD gsasl-1.1.ebuild 1159 RMD160 0dd442e6724c19fc2aa4f15e2e3b4b1cf78bf29d SHA1 7df91857df89fe8615d22db536dd63d7d25f3b48 SHA256 e75134888b43a6a61bbb0c27c0d43ff29fa07eec4a4714c2ff5631a7507ea54b
+MISC ChangeLog 3996 RMD160 aea7eae9bef3724b555c9862dfcb5855d9fb0776 SHA1 6bc3010c505a2f3f27729ca95c009aa24901c555 SHA256 a78e202c1869dba46e02c5e0c2236333aadc22c80aada52edac60981b6090518
 MISC metadata.xml 162 RMD160 fd38b82541901b3c6df18b630d79fe7883ae3f01 SHA1 e6aecefcc2137d6047cedfe447686775ab59cb48 SHA256 569031668e39895fb20829fb17a49a91a83e8f41b2195b0f04825c4340d2af6b
